package G16.Fields;

public abstract class BuyableField extends Field{
    public BuyableField(String name) {
        super(name);
    }
}
