package G16.Fields;

public abstract class UnbuyableField extends Field {

    public UnbuyableField(String name) {
        super(name);
    }
}
