package G16.Fields.UnbuyableFields;

import G16.Fields.Field;

public class Jail extends Field {
    public Jail(String name) {
        super(name);
    }

    }

