package G16.Fields;

public class VisitorField extends Field {
    public VisitorField(String name) {
        super(name);
    }
}
