@startuml
'https://plantuml.com/class-diagram





class Player {
Name
}

class MoneyBalance{}

abstract class Field{}

class PropertyField{}

class ChanceField{}

class GoToJailField{}

class Jail{}

class SodaField {}

class FerryField {}

class ChanceCard {}

class Bank{}

class Die {}

class Gameboard

abstract class BuyableField {}

abstract class UnBuyableField {}

class VisitorField {}



Player "3..6" - "1" Gameboard
Gameboard "1" -- "40" Field
Field <|-- BuyableField
Field <|-- UnBuyableField
UnBuyableField <|-- GoToJailField
UnBuyableField <|-- Jail
UnBuyableField <|-- ChanceField
UnBuyableField <|-- VisitorField

BuyableField <|-- PropertyField
BuyableField <|-- FerryField
BuyableField <|-- SodaField

MoneyBalance "1" - "1" Player

Gameboard "1" - "2" Die
Gameboard "1" - "?" ChanceCard
Bank "1" -- "1" Gameboard




@enduml